# repo-health

./: .gitignore  CHANGELOG.md  Cargo.toml  PACKAGE_SETUP.md  README.md  repo-health.json
.github/workflows/: release.yml
chocolatey/: repo-health.nuspec
chocolatey/tools/: chocolateyinstall.ps1
src/: cli.rs  error.rs  lib.rs  main.rs
src/analyzers/: bus_factor.rs  ci_cd.rs  dependencies.rs  documentation.rs  mod.rs  tests.rs
src/github/: client.rs  mod.rs
src/output/: badge.rs  markdown.rs  mod.rs
src/scoring/: calculator.rs  mod.rs
